package com;
import java.awt.Color;

/**
 * Classe Mur, represente un Mur dans le labyrinthe
 */

public class Mur extends Case {

    /**
     * CONSTRUCTEURS
     */

    /** Constructeur vide de Mur */
    Mur() {
        super(false, Color.BLACK);
    }
}